add memcached.enabled setting allowing to disable memcached even if its added as a plugin (by default, it is enabled)